--- a/200.html
+++ b/200.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/DigisChatApp/_nuxt/entry.Ck8NEcPU.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/DigisChatApp/_nuxt/iXAAY-EJ.js">
+<link rel="modulepreload" as="script" crossorigin href="/DigisChatApp/_nuxt/DvLlDlk1.js">
 <link rel="prefetch" as="style" crossorigin href="/DigisChatApp/_nuxt/default.Bk_z_PZW.css">
-<link rel="prefetch" as="script" crossorigin href="/DigisChatApp/_nuxt/fGrQZUeC.js">
-<link rel="prefetch" as="script" crossorigin href="/DigisChatApp/_nuxt/DQpJp1D2.js">
-<link rel="prefetch" as="style" crossorigin href="/DigisChatApp/_nuxt/error-404.aNCZ2L4y.css">
-<link rel="prefetch" as="script" crossorigin href="/DigisChatApp/_nuxt/Dxy7jKBb.js">
-<link rel="prefetch" as="script" crossorigin href="/DigisChatApp/_nuxt/Bu0tsqzv.js">
-<link rel="prefetch" as="style" crossorigin href="/DigisChatApp/_nuxt/error-500.JESWioAZ.css">
-<link rel="prefetch" as="script" crossorigin href="/DigisChatApp/_nuxt/D4B8Vl4e.js">
-<script type="module" src="/DigisChatApp/_nuxt/iXAAY-EJ.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1748462820956,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{baseURL:"/DigisChatApp/"},app:{baseURL:"/DigisChatApp/",buildId:"07c144db-92b0-4105-92ba-3093b447401d",buildAssetsDir:"/_nuxt/",cdnURL:"/DigisChatApp/"}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="/DigisChatApp/_nuxt/BjP6TZyE.js">
+<link rel="prefetch" as="script" crossorigin href="/DigisChatApp/_nuxt/mrlrY1S0.js">
+<link rel="prefetch" as="style" crossorigin href="/DigisChatApp/_nuxt/error-404.4oxyXxx0.css">
+<link rel="prefetch" as="script" crossorigin href="/DigisChatApp/_nuxt/POLrSGqq.js">
+<link rel="prefetch" as="script" crossorigin href="/DigisChatApp/_nuxt/BaVnIhk5.js">
+<link rel="prefetch" as="style" crossorigin href="/DigisChatApp/_nuxt/error-500.CZqNkBuR.css">
+<link rel="prefetch" as="script" crossorigin href="/DigisChatApp/_nuxt/Cd0_KKQB.js">
+<script type="module" src="/DigisChatApp/_nuxt/DvLlDlk1.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1748467247281,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{baseURL:"/DigisChatApp/"},app:{baseURL:"/DigisChatApp/",buildId:"0aee4ded-9f17-43fb-b4b8-e97372b6ff97",buildAssetsDir:"/_nuxt/",cdnURL:"/DigisChatApp/"}}</script></body></html>
