--- a/200.html
+++ b/200.html
@@ -10,5 +10,5 @@
 <link rel="prefetch" as="script" crossorigin href="/DigisChatApp/_nuxt/D64rwPdm.js">
 <link rel="prefetch" as="style" crossorigin href="/DigisChatApp/_nuxt/error-500.CZqNkBuR.css">
 <link rel="prefetch" as="script" crossorigin href="/DigisChatApp/_nuxt/BPrJMl5a.js">
-<script type="module" src="/DigisChatApp/_nuxt/CGjJfeK2.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1748470095996,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{baseURL:"/DigisChatApp/"},app:{baseURL:"/DigisChatApp/",buildId:"22f23303-c808-4777-9da9-cdbcb6c83912",buildAssetsDir:"/_nuxt/",cdnURL:"/DigisChatApp/"}}</script></body></html>
+<script type="module" src="/DigisChatApp/_nuxt/CGjJfeK2.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1748470830143,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{baseURL:"/DigisChatApp/"},app:{baseURL:"/DigisChatApp/",buildId:"917bbbc0-b5d6-4cc5-9a95-be207b0f68f5",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
